relax matching rules for gems to support versioned dependencies
In the Gemfile one may specify a version (or other arguments) when
declaring dependencies. Those dependencies were not detected with the
rule set.

This patch relaxes the RegEx used to detect gem dependencies by dropping
the `$`.

NOTE: only the test for one framework (Rails) has been adapted.

--- a/lib/technologist/frameworks.yml
+++ b/lib/technologist/frameworks.yml
@@ -1,11 +1,11 @@
 Locomotive:
   rules:
-    - Gemfile: ^gem 'locomotivecms_wagon'$
+    - Gemfile: ^gem 'locomotivecms_wagon'
   primary: Rails
 
 Rails:
   rules:
-    - Gemfile: ^gem 'rails'$
+    - Gemfile: ^gem 'rails'
 
 Magnolia:
   rules:
@@ -14,13 +14,13 @@ Magnolia:
 Sinatra:
   rules:
     - config.ru: run Sinatra::Application
-    - Gemfile: ^gem 'sinatra'$
+    - Gemfile: ^gem 'sinatra'
 
 Dashing:
   rules:
-    - Gemfile: ^gem 'dashing'$
+    - Gemfile: ^gem 'dashing'
   primary: Sinatra
 
 Middleman:
   rules:
-    - Gemfile: ^gem 'middleman'$
+    - Gemfile: ^gem 'middleman'
