support indentation for Gemfile based rules
In a Gemfile the `gem xxx` declarations might be indented. The rule set
did not support that.

This patch introduces support for indented gem declarations.

--- a/lib/technologist/frameworks.yml
+++ b/lib/technologist/frameworks.yml
@@ -1,11 +1,11 @@
 Locomotive:
   rules:
-    - Gemfile: ^gem 'locomotivecms_wagon'
+    - Gemfile: ^\s*gem 'locomotivecms_wagon'
   primary: Rails
 
 Rails:
   rules:
-    - Gemfile: ^gem 'rails'
+    - Gemfile: ^\s*gem 'rails'
 
 Magnolia:
   rules:
@@ -14,13 +14,13 @@ Magnolia:
 Sinatra:
   rules:
     - config.ru: run Sinatra::Application
-    - Gemfile: ^gem 'sinatra'
+    - Gemfile: ^\s*gem 'sinatra'
 
 Dashing:
   rules:
-    - Gemfile: ^gem 'dashing'
+    - Gemfile: ^\s*gem 'dashing'
   primary: Sinatra
 
 Middleman:
   rules:
-    - Gemfile: ^gem 'middleman'
+    - Gemfile: ^\s*gem 'middleman'
