add meteor rule

--- a/lib/technologist/frameworks.yml
+++ b/lib/technologist/frameworks.yml
@@ -24,3 +24,7 @@ Dashing:
 Middleman:
   rules:
     - !ruby/object:GemRule {}
+
+Meteor:
+  rules:
+    - !ruby/object:DirectoryPresenceRule { directory_name: '.meteor' }
