--- a/lib/technologist/frameworks.yml
+++ b/lib/technologist/frameworks.yml
@@ -41,3 +41,7 @@ Wordpress:
 Volt:
   rules:
     - !ruby/object:GemRule {}
+
+Ionic:
+  rules:
+    - !ruby/object:FilePresenceRule { file_name: 'ionic.project' }
