--- a/lib/technologist/frameworks.yml
+++ b/lib/technologist/frameworks.yml
@@ -1,6 +1,7 @@
 Rails:
   rules:
     - !ruby/object:GemRule {}
+    - !ruby/object:FileContentRule { file_name: 'boot.rb', file_content_pattern: 'Rails.boot!' }
 
 Locomotive:
   rules:
