simplify spree gem rule

--- a/lib/technologist/frameworks.yml
+++ b/lib/technologist/frameworks.yml
@@ -33,7 +33,7 @@ Meteor:
 
 Spree:
   rules:
-    - !ruby/object:GemRule { gem_name: 'spree' }
+    - !ruby/object:GemRule {}
   primary: Rails
 
 Wordpress:
