add alternative spree rule (older version)

--- a/lib/technologist/frameworks.yml
+++ b/lib/technologist/frameworks.yml
@@ -34,6 +34,7 @@ Meteor:
 Spree:
   rules:
     - !ruby/object:GemRule {}
+    - !ruby/object:FileContentRule { file_name: 'boot.rb', file_content_pattern: 'Spree.boot!' }
   primary: Rails
 
 Wordpress:
