simplify node rule
if node is not the top entry in the engines
section, our pattern fails. as long as we don't
have a proper json matcher, we just try to match
one line without context.

--- a/lib/technologist/frameworks.yml
+++ b/lib/technologist/frameworks.yml
@@ -53,7 +53,7 @@ Node:
   rules:
     - !ruby/object:FileContentRule
       file_name: 'package.json'
-      file_content_pattern: '"engines":\s*{\s*"node":'
+      file_content_pattern: '^\s*"node":'
 
 Hoodie:
   rules:
