put filename in quotes

--- a/lib/technologist/frameworks.yml
+++ b/lib/technologist/frameworks.yml
@@ -87,7 +87,7 @@ Rack:
   rules:
     - !ruby/object:GemRule { gem_name: 'rack' }
     - !ruby/object:FileContentRule
-      file_name: config.ru
+      file_name: 'config.ru'
       file_content_pattern: 'run Proc\.new { \|env\|'
 
 Magento:
