add alternative spring rule

--- a/lib/technologist/frameworks.yml
+++ b/lib/technologist/frameworks.yml
@@ -123,6 +123,8 @@ Spring:
   rules:
     - MavenPlugin:
       plugin_name: 'org.springframework'
+    - MavenPlugin:
+      plugin_name: '${spring.groupId}'
 
 Felix:
   rules:
