--- a/lib/technologist/frameworks.yml
+++ b/lib/technologist/frameworks.yml
@@ -135,3 +135,8 @@ GWT:
   rules:
     - MavenPlugin:
       plugin_name: 'com.google.gwt'
+
+Jersey:
+  rules:
+    - MavenPlugin:
+      plugin_name: 'com.sun.jersey'
