--- a/lib/technologist/frameworks.yml
+++ b/lib/technologist/frameworks.yml
@@ -39,6 +39,13 @@ Meteor:
   rules:
     - DirectoryPresence:
       directory_name: '.meteor'
+      
+Mantra:
+  rules:
+    - FileContent:
+      file_name: 'package.json'
+      file_content_pattern: '"mantra-core":'
+   primary: Meteor
 
 Spree:
   rules:
